--- a/OrthodonticAnalysis/CMakeLists.txt
+++ b/OrthodonticAnalysis/CMakeLists.txt
@@ -8,6 +8,7 @@ set(MODULE_PYTHON_SCRIPTS
 
 set(MODULE_PYTHON_RESOURCES
   Resources/Icons/${MODULE_NAME}.png
+  Resources/Icons/TeethSurface.png
   Resources/UI/${MODULE_NAME}.ui
   )
 
